--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -123,6 +123,14 @@
   .header-form {
     padding: 20px 20px;
   }
+  .profile-data .profile-content h2{
+    font-size: 14px;
+    padding:0px 0px;
+    margin-bottom: 10px;
+  }
+  .profile-data{
+    align-items: flex-start;
+  }
 }
 
 @media only screen and (max-width:768px) {
@@ -159,6 +167,12 @@
 }
 
 @media only screen and (max-width:600px) {
+  .hero-section-profile{
+    padding-top: 80px;
+  }
+  .profile-data{
+    flex-direction: column;
+  }
   .card-body {
     padding-left: 0px;
     padding-right: 0px;
@@ -170,7 +184,14 @@
     font-size: 15px;
 
   }
-
+  .profile-data .profile-image{
+    width:100% !important;
+  height: auto;
+  }
+  .profile-data .profile-image img{
+    width:100% !important;
+  height: auto;
+  }
   .testimonials,
   .tutors,
   .work,
