--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2103,3 +2103,54 @@ height: 10px;
   padding-top: 3px !important;
   text-align: center;
 }
+
+
+
+.carousel__slide {
+  position: relative;
+  display: block;
+  /* flex: 1 0 100%; */
+  width: 100%;
+  height: width;
+  overflow: hidden;
+  transition: all 200ms ease-out;
+  box-sizing: border-box;
+  white-space: normal; }
+  .carousel__slide figure {
+    display: flex;
+    margin: 0; }
+    @media only screen and (max-width: 7479px) {
+      .carousel__slide figure {
+        justify-content: center; } }
+  .carousel__slide div {
+    width: 100%;
+    position: relative;
+    overflow: hidden; }
+    .carousel__slide div:before {
+      display: block;
+      content: "";
+      padding-top: 100%; }
+    .carousel__slide div > img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%; }
+    @media only screen and (max-width: 7479px) {
+      .carousel__slide div {
+        width: 100%; } }
+  .carousel__slide img {
+    display: block;
+    flex: 1 1 auto;
+    object-fit: cover; }
+
+.owl-stage{
+  display: flex !important;
+  justify-content: stretch !important;
+}
+.owl-stage>div{
+  display: flex !important;
+  justify-content: stretch !important;
+}
