--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -408,4 +408,47 @@
   /* .sm-100 {
     width: 100% !important;
   } */
+
+
+
+
+
+
+
+
+
+  /* ============================group lessons */
+  .filter-main-div{
+    width: 100%;
+    margin:7px 0px !important;
+  }
+  .filter-btn-div{
+   width: 100%;
+  }
+  .filter-btn{
+    width: 100%;
+    margin-top: 7px;
+  }
+  .group-card-heading h1{
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .group-card-profile p{
+    font-size: 14px;
+  }
+  .group-card-profile img{
+    height: 25px !important;
+    width: 25px !important;
+  }
+  
+.group-card-slider .owl-nav {
+  margin-left:-10px ;
+  margin-right: -10px;
+}
+
+.group-card-slider.owl-theme .owl-nav [class*='owl-'] {
+  width: 38px;
+  height: 38px;
+  margin-top: -50px;
+}
 }
