--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,7 +631,8 @@ line-height: 32px;
 .testimonials {
   padding: 100px 0px;
 }
-.testimonial-slider{
+
+.testimonial-slider {
   position: relative;
 }
 
@@ -681,7 +682,8 @@ line-height: 32px;
 .testimonial-slider .carousel-indicators button.active {
   background-color: #FF6C0B !important;
 }
-.carousel-control-next{
+
+.carousel-control-next {
   background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.94995 4.08017L15.47 10.6002C16.24 11.3702 16.24 12.6302 15.47 13.4002L8.94995 19.9202" stroke="%23FF6C0B" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/></svg>') !important;
   background-repeat: no-repeat !important;
   background-position: center;
@@ -692,6 +694,7 @@ line-height: 32px;
   background-repeat: no-repeat !important;
   background-position: center;
 }
+
 .carousel-control-next {
   position: absolute !important;
   top: unset !important;
@@ -709,7 +712,7 @@ line-height: 32px;
 
 .carousel-control-prev {
   position: absolute !important;
-  top:unset !important;
+  top: unset !important;
   bottom: -50px !important;
   right: 60px !important;
   left: unset !important;
@@ -724,7 +727,7 @@ line-height: 32px;
 }
 
 .carousel-control-next,
-.carousel-control-prev{
+.carousel-control-prev {
   /* height: 48px;*/
   /* width: 48px;  */
   /* padding: 20px !important; */
@@ -733,20 +736,22 @@ line-height: 32px;
   background-size: 20px !important;
 
 }
+
 /* .carousel-control-prev.disabled,
 .carousel-control-next.disabled {
     opacity: 0.5 !important;
     pointer-events: none !important;
     cursor: not-allowed !important;
 } */
- .carousel-control-prev.disabled,
-.carousel-control-next.disabled{
+.carousel-control-prev.disabled,
+.carousel-control-next.disabled {
   opacity: 0.5 !important;
   pointer-events: none !important;
-  cursor:not-allowed;
+  cursor: not-allowed;
   border: 1px solid gray;
   filter: grayscale(100%);
 }
+
 /* .carousel-control-next-icon{
   background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
 
@@ -1635,11 +1640,12 @@ line-height: 32px;
   position: relative;
 }
 
-.side-card-arrow{
+.side-card-arrow {
   position: absolute;
   top: 10px;
   left: -10px;
 }
+
 .side-card video {
   height: auto;
   width: 100%;
@@ -1673,18 +1679,21 @@ line-height: 32px;
 
 }
 
-.card-detail-section{
+.card-detail-section {
   display: none;
   height: 200px;
   overflow: visible;
 }
-.card-main-section{
+
+.card-main-section {
   cursor: pointer;
 }
-.card-main-section:hover .card-detail-section{
+
+.card-main-section:hover .card-detail-section {
   display: block !important;
- 
- }
+
+}
+
 .teacher-card--header {
   display: flex;
   align-items: flex-start;
@@ -2013,14 +2022,19 @@ line-height: 32px;
   display: flex;
   flex-direction: column;
   width: 100% !important;
-  color: rgba(44, 44, 44, 0.80) !important;;
-  text-align: left !important;;
-  font-family: Poppins !important;;
+  color: rgba(44, 44, 44, 0.80) !important;
+  ;
+  text-align: left !important;
+  ;
+  font-family: Poppins !important;
+  ;
   font-size: 14px !important;
 }
-#top div{
+
+#top div {
   width: 100% !important;
 }
+
 #timezone-selector {
   width: 100% !important;
   background-color: transparent;
@@ -2028,13 +2042,19 @@ line-height: 32px;
   border: 1px solid #ccc;
   padding: 4px 10px !important;
   border-radius: 4px !important;
-  color: rgba(44, 44, 44, 0.80) !important;;
-  text-align: left !important;;
-  font-family: Poppins !important;;
+  color: rgba(44, 44, 44, 0.80) !important;
+  ;
+  text-align: left !important;
+  ;
+  font-family: Poppins !important;
+  ;
   font-size: 14px !important;
-  font-style: normal !important;;
-  font-weight: 400 !important;;
-  line-height: 24px !important;;
+  font-style: normal !important;
+  ;
+  font-weight: 400 !important;
+  ;
+  line-height: 24px !important;
+  ;
   /* 171.429% */
 }
 
@@ -2059,34 +2079,43 @@ line-height: 32px;
   color: #000;
 }
 
-.fc-state-default{
+.fc-state-default {
   border-radius: 3px !important;
   border: 1px solid rgba(44, 44, 44, 0.20) !important;
   opacity: 0.6 !important;
   box-shadow: 10px 10px 35px 0px rgba(0, 0, 0, 0.05) !important;
 }
-.fc-state-default.fc-corner-right{
+
+.fc-state-default.fc-corner-right {
   margin-left: 10px !important
 }
-.fc-right h2{
-  color: rgba(44, 44, 44, 0.80) !important;;
-  text-align: left !important;;
-  font-family: Poppins !important;;
+
+.fc-right h2 {
+  color: rgba(44, 44, 44, 0.80) !important;
+  ;
+  text-align: left !important;
+  ;
+  font-family: Poppins !important;
+  ;
   font-size: 16px !important;
   margin-top: 5px;
 }
-.fc-toolbar.fc-header-toolbar{
+
+.fc-toolbar.fc-header-toolbar {
   margin-bottom: 10px !important;
 }
-.fc-day-header a{
+
+.fc-day-header a {
   font-size: 13px !important;
   font-weight: 500 !important;
   padding: 7px 7px !important;
 }
-.fc-day-header{
+
+.fc-day-header {
   padding: 7px 7px !important;
   text-align: center !important;
 }
+
 /* .fc-axis.fc-time.fc-widget-content{
   display: none !important;
 } */
@@ -2095,46 +2124,60 @@ line-height: 32px;
 } */
 /* Add this CSS to your stylesheet */
 .fc-time {
-  display: none; /* Hide event times */
+  display: none;
+  /* Hide event times */
 }
-.fc-time, .fc-axis {
-  display: none; /* Hide event times and time labels for slots */
+
+.fc-time,
+.fc-axis {
+  display: none;
+  /* Hide event times and time labels for slots */
 }
-.tabtable-responsive{
+
+.tabtable-responsive {
   overflow-x: auto;
 }
+
 .tabtable-responsive::-webkit-scrollbar {
   height: 10px;
 }
 
 .tabtable-responsive::-webkit-scrollbar-thumb {
-height: 10px;
+  height: 10px;
 }
+
 .tabtable-responsive::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   border-radius: 10px;
 }
-.fulltab-table{
+
+.fulltab-table {
   min-width: 500px;
 }
+
 .fc-body::-webkit-scrollbar {
   height: 10px !important;
 }
+
 .fc-body::-webkit-scrollbar-thumb {
   background-color: darkgrey !important;
-  border-radius: 10px !important; 
+  border-radius: 10px !important;
 }
-.fc-time-grid .fc-slats .fc-minor td{
+
+.fc-time-grid .fc-slats .fc-minor td {
   border-top-style: solid !important;
 }
+
 /* .fc-time-grid .fc-bgevent, .fc-time-grid .fc-event{
   background-color: transparent !important;
   border: none !important;
 } */
-#calendar{
+#calendar {
   margin-top: 20px !important;
 }
-.fc-time-grid .fc-bgevent, .fc-time-grid .fc-event{
+
+.fc-time-grid .fc-bgevent,
+.fc-time-grid .fc-event {
   background-color: transparent;
   border: none;
   color: var(--primary);
@@ -2153,42 +2196,60 @@ height: 10px;
   overflow: hidden;
   transition: all 200ms ease-out;
   box-sizing: border-box;
-  white-space: normal; }
+  white-space: normal;
+}
+
+.carousel__slide figure {
+  display: flex;
+  margin: 0;
+}
+
+@media only screen and (max-width: 7479px) {
   .carousel__slide figure {
-    display: flex;
-    margin: 0; }
-    @media only screen and (max-width: 7479px) {
-      .carousel__slide figure {
-        justify-content: center; } }
+    justify-content: center;
+  }
+}
+
+.carousel__slide div {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel__slide div:before {
+  display: block;
+  content: "";
+  padding-top: 100%;
+}
+
+.carousel__slide div>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 7479px) {
   .carousel__slide div {
     width: 100%;
-    position: relative;
-    overflow: hidden; }
-    .carousel__slide div:before {
-      display: block;
-      content: "";
-      padding-top: 100%; }
-    .carousel__slide div > img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%; }
-    @media only screen and (max-width: 7479px) {
-      .carousel__slide div {
-        width: 100%; } }
-  .carousel__slide img {
-    display: block;
-    flex: 1 1 auto;
-    object-fit: cover; }
+  }
+}
 
-.owl-stage{
+.carousel__slide img {
+  display: block;
+  flex: 1 1 auto;
+  object-fit: cover;
+}
+
+.owl-stage {
   display: flex !important;
   justify-content: stretch !important;
 }
-.owl-stage>div{
+
+.owl-stage>div {
   display: flex !important;
   justify-content: stretch !important;
 }
@@ -2207,233 +2268,16 @@ height: 10px;
 
 
 
-
-.card-wrapper {
-  margin: 20px 4px !important;
-  padding: 23px !important;
-  border-radius: 6px;
-  border: 1px solid rgba(255, 108, 11, 0.1);
-  background: #f9f9fb;
-  width: fit-content;
-}
-
-.slider-card {
-  display: flex;
-  flex-direction: column;
-}
-
-.card-image {
-  height: 150px;
-  left: 9px;
-  object-fit: cover;
-  top: 9px;
-  width: 265px;
-}
-
-.b2-c2 {
-  align-items: center;
-  display: inline-flex;
-  gap: 10px;
-  left: 14px;
-
-  padding-top: 8px;
-}
-.b2c2text-wrapper {
-  color: var(--f);
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 18px;
-  margin-top: -1px;
-  position: relative;
-  text-align: center;
-  white-space: nowrap;
-  width: fit-content;
-}
-
-.likely-tosell {
-  color: #2c2c2ccc;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: 18px;
-  margin-top: -1px;
-  position: relative;
-  text-align: center;
-  white-space: nowrap;
-  width: fit-content;
-}
-.paragraph {
-  color: #2c2c2c;
-  font-size: 20px;
-  font-weight: 600;
-  left: 14px;
-  letter-spacing: 0;
-  line-height: 30px;
-  top: 196px;
-  width: 255px;
-}
-.profile {
-  align-items: flex-start;
-  gap: 15px;
-  left: 14px;
-  top: 272px;
-  width: 260px;
-}
-.person-data {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  flex-direction: row;
-}
-
-.person {
-  height: 30.5px;
-  display: flex;
-  width: 130px;
-  gap: 1px;
-  align-items: center;
-}
-
-.person-image {
-  height: 30px;
-  left: 0;
-  object-fit: cover;
-  top: 0;
-  width: 30px;
-}
-
-.reviews {
-  display: flex;
-  align-items: center;
-  height: 30px;
-  margin-right: -2px;
-  width: 108.75px;
-}
-.icon {
-  left: 0;
-  top: 0;
-}
-
-.rating {
-  color: #2c2c2ccc;
-  font-size: 14px;
-  font-weight: 400;
-  left: 43px;
-  letter-spacing: 0;
-  line-height: normal;
-  top: 5px;
-}
-
-.span-text {
-  font-weight: 500;
-}
-.price-panal {
-  display: flex;
-  flex-direction: row;
-  height: 30.5px;
-  align-items: stretch;
-  align-content: flex-start;
-  justify-content: space-between;
-}
-.price-box {
-  height: 34px;
-  width: 146px;
-  background-color: #f1ba95;
-  color: #ff6c0b;
-  border-radius: 5px;
-  border: none;
-}
-.price-elements a {
-  font-style: none;
-  text-decoration: none;
-  color: #ff6c0b;
-}
-
-.price-element {
-  color: #6e6057;
-  font-size: 16px;
-  font-weight: 400;
-  height: 24px;
-  left: 19px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 8px;
-}
-
-.span-classtext {
-  height: 24px;
-  margin-right: -2px;
-  position: relative;
-  width: 62px;
-}
-.top-reviews {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  height: 24px;
-  margin-right: -2px;
-  position: relative;
-  width: 62px;
-}
-.reviews-box {
-  height: 24px;
-  position: relative;
-  width: 60px;
-}
-.review-2 {
-  height: 24px;
-  left: 0;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 24px;
-}
-.review-3 {
-  height: 24px;
-  left: 12px;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 24px;
-}
-.review-4 {
-  height: 24px;
-  left: 24px;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 24px;
-}
-.review-5 {
-  height: 24px;
-  left: 36;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 24px;
-}
-.review-text {
-  color: #ffffff;
-  font-size: 8px;
-  font-weight: 500;
-  left: 31px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 6px;
-}
 
 .group-classText {
   padding-top: 150px;
 }
-.hoverable-dahboard{
+
+.hoverable-dahboard {
   position: relative;
 }
 
-.hoverable-dahboard-dropdown{
+.hoverable-dahboard-dropdown {
   position: absolute;
   bottom: 0;
   top: 99%;
@@ -2447,6 +2291,305 @@ height: 10px;
   height: 80px;
   display: none;
 }
-.hoverable-dahboard:hover .hoverable-dahboard-dropdown{
+
+.hoverable-dahboard:hover .hoverable-dahboard-dropdown {
   display: block;
+}
+
+
+/* ===============================================================group lesson */
+.filter-main-div {
+  width: auto;
+  border-radius: 6px;
+  border: 1px solid rgba(44, 44, 44, 0.20);
+  display: flex;
+  align-items: center;
+  margin: 0px 5px;
+}
+
+.active-filter {
+  border: 1px solid #FF6C0B !important;
+}
+
+.filter-main-div select {
+  margin-top: 0px !important;
+
+  padding: 10px 35px 10px 7px;
+  color: rgba(44, 44, 44, 0.80);
+  text-align: left;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  /* 171.429% */
+}
+
+.filter-btn-div {
+  width: auto;
+}
+
+.filter-btn {
+  background-color: #FF6C0B;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  border: none;
+  border-radius: 4px;
+  padding: 11px 10px;
+}
+
+
+.carousel__slide-1 {
+  position: relative;
+  display: block;
+  flex: 1 0 100%;
+  width: 100%;
+  height: width;
+  overflow: hidden;
+  transition: all 200ms ease-out;
+  box-sizing: border-box;
+  white-space: normal;
+}
+
+.carousel__slide-1 figure {
+  display: flex;
+  margin: 0;
+}
+
+@media only screen and (max-width: 7479px) {
+  .carousel__slide-1 figure {
+    justify-content: center;
   }
+}
+
+.carousel__slide-1 div {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel__slide-1 div:before {
+  display: block;
+  content: "";
+  padding-top: 50%;
+}
+
+.carousel__slide-1 div>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 7479px) {
+  .carousel__slide-1 div {
+    width: 100%;
+  }
+}
+
+.carousel__slide-1 img {
+  display: block;
+  flex: 1 1 auto;
+  object-fit: cover;
+}
+
+.carousel__slide-1 .credit {
+  margin-top: 1rem;
+  color: rgba(0, 0, 0, 0.5);
+  display: block;
+}
+
+.carousel__slide-1.scrollable {
+  overflow-y: scroll;
+}
+
+.group-card {
+  border-radius: 6px;
+  border: 1px solid rgba(255, 108, 11, 0.10);
+  background: #F9F9FB;
+  padding: 10px;
+}
+
+.group-card-content {
+  padding: 12px 5px 5px 5px;
+}
+
+.group-card img {
+  border-radius: 4px;
+}
+
+.group-card-category h2 {
+  color: var(--f, #2C2C2C);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  /* 128.571% */
+}
+
+.group-card-category span {
+  color: rgba(44, 44, 44, 0.80);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  /* 128.571% */
+}
+
+.group-card-heading h1 {
+  color: #2C2C2C;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px;
+  /* 150% */
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
+
+.group-card-profile img {
+  border-radius: 30px;
+  border: 1px solid #D3E1E3;
+  width: 30px !important;
+  height: 30px !important;
+  flex-shrink: 0;
+  object-fit: cover;
+}
+
+.group-card-profile p {
+  color: rgba(44, 44, 44, 0.80);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  width: 110px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.group-card-profile span {
+  color: #E3E3E3;
+
+}
+
+.group-card-profile h3 {
+  color: rgba(44, 44, 44, 0.80);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.group-card-line {
+  color: #E3E3E3;
+}
+
+.group-card-price {
+  background-color: #FF6C0B1A;
+  padding: 5px 16px;
+  border-radius: 4px;
+  color: var(--Primary, #FF6C0B);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.group-review-profile {
+  display: flex;
+}
+
+.group-review-profile img {
+  width: 24px !important;
+  height: 24px !important;
+  flex-shrink: 0;
+  border-radius: 100%;
+  object-fit: cover;
+  margin-left: -17px;
+  border: 1px solid #FF6C0B;
+
+}
+
+.group-review-profile-number {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  border-radius: 100%;
+  object-fit: cover;
+  margin-left: -17px;
+  border: 1px solid #FF6C0B;
+  background-color: #000000a2;
+  font-size: 10px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.all-classes {
+  background-color: #FFF9F5;
+  padding: 70px 0px;
+}
+
+.today-section {
+  padding:0px 0px 40px 0;
+}
+
+.group-card-slider .owl-nav {
+  display: flex;
+  justify-content: space-between !important;
+  margin-left:-30px ;
+  margin-right: -30px;
+}
+
+.group-card-slider.owl-theme .owl-nav [class*='owl-'] {
+  border: 1px solid #ff6c0b;
+  background-color: white;
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+ padding-bottom: 3px !important;
+ color: #ff6c0b;
+ margin-top: -100px;
+ filter: drop-shadow(10px 10px 35px rgba(0, 0, 0, 0.15));
+
+}
+
+.group-card-slider.owl-theme .owl-nav [class*='owl-'] span {
+  /* display: none; */
+  font-size: 32px;
+}
+
+.group-card-slider.owl-theme .owl-nav .disabled {
+  border: 1px solid rgba(44, 44, 44, 0.20);
+  background-color: white;
+  color: #000;
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+}
